Fix font size on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,7 +28,7 @@
   flex-wrap: wrap;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .topLinks {
     font-size: 0.5rem;
     justify-content: center;
